--- a/propfi-contract/Anchor.toml
+++ b/propfi-contract/Anchor.toml
@@ -1,6 +1,12 @@
+[programs.localnet]
+propfi = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkgVh9r7v6v7P"
+
+[registry]
+url = "https://anchor.projectserum.com"
+
 [provider]
-cluster = "devnet"
+cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
-[programs.devnet]
-propfi = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkgVh9r7v6v7P"
+[scripts]
+test = "anchor test"
