--- a/propfi-contract/programs/propfi/Cargo.toml
+++ b/propfi-contract/programs/propfi/Cargo.toml
@@ -1,10 +1,13 @@
 [package]
 name = "propfi"
 version = "0.1.0"
+description = "PropFi: Tokenized Real Estate on Solana"
 edition = "2021"
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib", "lib"]
+name = "propfi"
 
 [dependencies]
-anchor-lang = { version = "0.33.0", features = ["init-if-needed"] }
+anchor-lang = "0.28.0"
+anchor-spl = "0.28.0"
